[project]
name = "personal-learning-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "CharlesChi715", email = "qiyaofu715@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
personal-learning-agent = "personal_learning_agent:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
